@@ -1192,19 +1192,6 @@
         </widget>
        </item>
        <item>
-        <spacer>
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item>
         <widget class="QGroupBox" name="groupBox_8">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -1226,150 +1213,18 @@
             </property>
            </widget>
           </item>
-         </layout>
-        </widget>
-       </item>
-       <item>
-        <widget class="QGroupBox" name="rcGroup">
-         <property name="toolTip">
-          <string>enable midi remote control</string>
-         </property>
-         <property name="title">
-          <string>MIDI Remote Control</string>
-         </property>
-         <property name="flat">
-          <bool>true</bool>
-         </property>
-         <property name="checkable">
-          <bool>true</bool>
-         </property>
-         <layout class="QGridLayout">
-          <property name="margin">
-           <number>9</number>
-          </property>
-          <property name="spacing">
-           <number>6</number>
-          </property>
-          <item row="0" column="0">
-           <widget class="QLabel" name="label_16">
-            <property name="text">
-             <string>Stop</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="1">
-           <widget class="GreendotButton" name="stopActive">
-            <property name="toolTip">
-             <string>is active</string>
-            </property>
-            <property name="text">
-             <string>...</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="2">
-           <widget class="RecordButton" name="recordStop">
-            <property name="toolTip">
-             <string>record</string>
-            </property>
-            <property name="text">
-             <string>...</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="3">
-           <spacer>
+          <item>
+           <spacer name="verticalSpacer_6">
             <property name="orientation">
-             <enum>Qt::Horizontal</enum>
+             <enum>Qt::Vertical</enum>
             </property>
             <property name="sizeHint" stdset="0">
              <size>
-              <width>40</width>
-              <height>20</height>
+              <width>20</width>
+              <height>40</height>
              </size>
             </property>
            </spacer>
-          </item>
-          <item row="1" column="0">
-           <widget class="QLabel" name="label_14">
-            <property name="text">
-             <string>Record</string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="1">
-           <widget class="GreendotButton" name="recordActive">
-            <property name="toolTip">
-             <string>is active</string>
-            </property>
-            <property name="text">
-             <string>...</string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="2">
-           <widget class="RecordButton" name="recordRecord">
-            <property name="toolTip">
-             <string>record</string>
-            </property>
-            <property name="text">
-             <string>...</string>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="0">
-           <widget class="QLabel" name="label_15">
-            <property name="text">
-             <string>Rewind</string>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="1">
-           <widget class="GreendotButton" name="rewindActive">
-            <property name="toolTip">
-             <string>is active</string>
-            </property>
-            <property name="text">
-             <string>...</string>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="2">
-           <widget class="RecordButton" name="recordRewind">
-            <property name="toolTip">
-             <string>record</string>
-            </property>
-            <property name="text">
-             <string>...</string>
-            </property>
-           </widget>
-          </item>
-          <item row="3" column="0">
-           <widget class="QLabel" name="label_20">
-            <property name="text">
-             <string>Play</string>
-            </property>
-           </widget>
-          </item>
-          <item row="3" column="1">
-           <widget class="GreendotButton" name="playActive">
-            <property name="toolTip">
-             <string>is active</string>
-            </property>
-            <property name="text">
-             <string>...</string>
-            </property>
-           </widget>
-          </item>
-          <item row="3" column="2">
-           <widget class="RecordButton" name="recordPlay">
-            <property name="toolTip">
-             <string>record</string>
-            </property>
-            <property name="text">
-             <string>...</string>
-            </property>
-           </widget>
           </item>
          </layout>
         </widget>
@@ -2401,16 +2256,6 @@
    <extends>QFrame</extends>
    <header>awl/colorlabel.h</header>
    <container>1</container>
-  </customwidget>
-  <customwidget>
-   <class>GreendotButton</class>
-   <extends>QToolButton</extends>
-   <header>greendotbutton.h</header>
-  </customwidget>
-  <customwidget>
-   <class>RecordButton</class>
-   <extends>QToolButton</extends>
-   <header>recordbutton.h</header>
   </customwidget>
  </customwidgets>
  <resources>
